Version 5.3.0.22
ffi/unsafe: added cpointer-gcable?
racket/class: added dynamic-get-field and dynamic-set-field!

Version 5.3.0.20
Added exn:break:hang-up and exn:break:terminate, added
 extra argument to break-thread and place-break, and
 redirect SIGTERM and SIGHUP as breaks
Add #:fill option to for/vector, for*/vector, for/flvector,
 for*/flvector, for/fxvector, and for*/fxvector

Version 5.3.0.16
scribble/base: add items/c
scribble/decode: add spliceof

Version 5.3, August 2012
Added submodules, including module*
Changed the format of error messages
Added raise-argument-error, raise-result-error,
 raise-arguments-error, raise-range-error
Added impersonate-continuation-mark-key,
 chaperone-continuation-mark-key, make-continuation-mark-key,
 continuation-mark-key?, impersonate-prompt-tag, and
 chaperone-prompt-tag
Added progress-evt?, thread-cell-values?, prefab-key?,
 semaphore-peek-evt?, channel-put-evt?
Fixed handle-evt to disallow a handle-evt
Added variable-reference->module-path-index
Added syntax-local-submodules, module-path-index-submodule,
 and module-compiled-submodules
Changed module-path-index-join to support a submodule argument
Changed module-path? to report #t for paths
Changed resolved module paths to allow lists that represent
 submodule paths; see the revised contract on resolve-module-path-name
Changed the module name resolver protocol so that a module declaration
 always triggers a notifification, and a notification supplies
 a source namespace (i.e., an extra argument) for attaches
Changed the load/use-compiled handler protocol to subpport a submodule
 module
Changed current-write-relative-directory to support a pair
 of paths: relative-to and base
Changed local-expand to not add core forms if the stop list has
 just module*
Changed modules instantiation so that requires are instantiated
 in the order that they are required
Changed #lang for most languages so that it cannot be nested;